--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
   "scripts": {
     "dev": "vite",
     "build": "tsc && vite build",
+    "prepare": "npm run build",
     "preview": "vite preview"
   },
   "files": [
@@ -38,10 +39,23 @@
     "vite": "^3.2.3",
     "vite-plugin-dts": "^1.7.1"
   },
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/asotog/fabricjs-react.git"
+  },
   "bugs": {
     "url": "https://github.com/asotog/fabricjs-react/issues"
   },
+  "homepage": "https://github.com/asotog/fabricjs-react#readme",
+  "keywords": [
+    "fabricjs",
+    "fabric.js",
+    "react",
+    "canvas",
+    "react-hooks",
+    "fabricjs-react"
+  ],
   "engines": {
-    "node": ">=20.0.0 <26.0.0"
+    "node": ">=20.0.0"
   }
 }
